tests/snapshots/readback__number.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback/number.hvm
---
non-linear:
10

linear:
10
